--- a/src/App.scss
+++ b/src/App.scss
@@ -5,12 +5,12 @@
   display: flex;
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
   justify-content: center;
   align-items: center;
 
   &--fullscreen {
     position: fixed;
-    z-index: 9999999;
+    z-index: 99;
   }
 }
